[tool.poetry]
name = "wonda"
version = "0.7.7"
description = "A light, blazing fast framework for developing capable bots."
authors = []
license = "MIT"
readme = "README.md"
homepage = "https://github.com/wondergram-org/wonda/"

[tool.poetry.dependencies]
python = "^3.10"
certifi = "^2024.12.14"
aiohttp = "^3.9.5"
structlog = "^24.4.0"
choicelib = "^0.1.5"
msgspec = "^0.19.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
ruff = "^0.4.9"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
