[tool.poetry]
name = "wonda"
version = "0.7.8"
description = "A light, blazing fast framework for developing capable bots."
authors = []
license = "MIT"
readme = "README.md"
homepage = "https://github.com/wondergram-org/wonda/"

[tool.poetry.dependencies]
python = "^3.10"
certifi = "^2025.1.31"
aiohttp = "^3.11.11"
structlog = "^25.1.0"
choicelib = "^0.1.5"
msgspec = "^0.19.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
ruff = "^0.9.4"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
