[project]
name = "wonda"
version = "0.7.9"
description = "A light, blazing fast framework for developing capable bots."
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.11",
    "certifi>=2025.1.31",
    "choicelib>=0.1.5",
    "msgspec>=0.19.0",
    "structlog>=25.1.0",
]

[dependency-groups]
dev = ["mypy>=1.14.1", "ruff>=0.9.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["wonda"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
